--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,72 +1,45 @@
-<header id="header" class="header">
-    <div class="container">
-      <div class="row">
-        <div class="four columns">
-          <h2>Ecommerce DuocUC</h2>
-        </div>
-      </div>
-    </div>
-  </header>
-  
-  <div class="container">
-    <div class="row">
-      <div class="six columns offset-by-three">
-        <div class="login-container">
-          <h2 class="text-center">Iniciar Sesión</h2>
-          <form (ngSubmit)="onSubmit($event)" novalidate>
-            <div class="row">
-              <div class="twelve columns">
-                <label for="email">Email</label>
-                <input
-                  class="u-full-width"
-                  type="email"
-                  id="email"
-                  placeholder="correo@ejemplo.com"
-                  required
-                  [(ngModel)]="email"
-                  name="email"
-                  (input)="onEmailInput()"
-                >
-                <span class="error-message">{{ emailError }}</span>
-              </div>
+<div class="container">
+  <div class="row">
+    <div class="six columns offset-by-three">
+      <div class="login-container">
+        <h2 class="text-center">Iniciar Sesión</h2>
+        <form (ngSubmit)="onSubmit($event)" novalidate>
+          <div class="row">
+            <div class="twelve columns">
+              <label for="email">Email</label>
+              <input class="u-full-width" type="email" id="email" placeholder="correo@ejemplo.com" required
+                [(ngModel)]="email" name="email" (input)="onEmailInput()">
+              <span class="error-message">{{ emailError }}</span>
             </div>
-            <div class="row">
-              <div class="twelve columns">
-                <label for="password">Contraseña</label>
-                <input
-                  class="u-full-width"
-                  type="password"
-                  id="password"
-                  placeholder="Ingresa tu contraseña"
-                  required
-                  [(ngModel)]="password"
-                  name="password"
-                  (input)="onPasswordInput()"
-                >
-                <span class="error-message">{{ passwordError }}</span>
-              </div>
+          </div>
+          <div class="row">
+            <div class="twelve columns">
+              <label for="password">Contraseña</label>
+              <input class="u-full-width" type="password" id="password" placeholder="Ingresa tu contraseña" required
+                [(ngModel)]="password" name="password" (input)="onPasswordInput()">
+              <span class="error-message">{{ passwordError }}</span>
             </div>
-            <div class="row">
-              <div class="twelve columns">
-                <button class="button-primary u-full-width" type="submit">
-                  Iniciar Sesión
-                </button>
-              </div>
+          </div>
+          <div class="row">
+            <div class="twelve columns">
+              <button class="button-primary u-full-width" type="submit">
+                Iniciar Sesión
+              </button>
             </div>
-            <div class="row">
-              <div class="twelve columns text-center">
-                <p>
-                  ¿No tienes una cuenta?
-                  <a routerLink="/register">Regístrate aquí</a>
-                </p>
-                <p>
-                  <a routerLink="/reset-password">¿Olvidaste tu contraseña?</a>
-                </p>
-              </div>
+          </div>
+          <div class="row">
+            <div class="twelve columns text-center">
+              <p>
+                ¿No tienes una cuenta?
+                <a routerLink="/register">Regístrate aquí</a>
+              </p>
+              <p>
+                <a routerLink="/reset-password">¿Olvidaste tu contraseña?</a>
+              </p>
             </div>
-          </form>
-        </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
-  
+</div>
